Found a bug that only appears on mobile with the header having too much space.

--- a/themes/net-feud/assets/css/master.css
+++ b/themes/net-feud/assets/css/master.css
@@ -436,6 +436,11 @@ button {
   clear: both;
 }
 
+.page__wrapper article.page {
+  position: relative;
+  top: -32px;
+}
+
 .page__wrapper h1 {
   text-align: center;
   padding: 2rem;
